--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Yer belirlenmesi için konum izni verin</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Favori yerinizin resmini seçin</string>
 	<key>NSCameraUsageDescription</key>
