--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   image_picker: ^0.8.7+5
   location: ^4.4.0
   http: ^0.13.6
+  google_maps_flutter: ^2.2.6
+  path_provider: ^2.0.15
+  path: ^1.8.2
+  sqflite: ^2.2.8+4
 
 dev_dependencies:
   flutter_test:
